--- a/package.xml
+++ b/package.xml
@@ -1,48 +1,37 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
     <name>pcdfilter_pa</name>
     <version>1.0.0</version>
-    <description>The proaut pointcloud filter package</description>
-    <maintainer email="wepet@hrz.tu-chemnitz.de">wepet</maintainer>
-    <license>other</license>
+    <description>ProAut pointcloud filter package</description>
+    <maintainer email="wepet@hrz.tu-chemnitz.de">Peter Weissig</maintainer>
+    <license>BSD</license>
 
     <buildtool_depend>catkin</buildtool_depend>
 
 
-    <build_depend>roscpp</build_depend>
+    <depend>roscpp</depend>
 
-    <build_depend>std_msgs</build_depend>
-    <build_depend>sensor_msgs</build_depend>
-    <build_depend>std_srvs</build_depend>
+    <depend>std_msgs</depend>
+    <depend>sensor_msgs</depend>
+    <depend>std_srvs</depend>
+
+    <depend>tf</depend>
+
+    <depend>cv_bridge</depend>
+    <depend>image_transport</depend>
+
+    <depend>pcl_ros</depend>
+    <depend>pcl_conversions</depend>
+
+    <depend>parameter_pa</depend>
+
+
     <build_depend>message_generation</build_depend>
-
-    <build_depend>tf</build_depend>
-
-    <build_depend>cv_bridge</build_depend>
-    <build_depend>image_transport</build_depend>
-
-    <build_depend>pcl_ros</build_depend>
-    <build_depend>pcl_conversions</build_depend>
-
-    <build_depend>parameter_pa</build_depend>
+    <build_export_depend>message_runtime</build_export_depend>
+    <exec_depend>message_runtime</exec_depend>
 
 
-
-    <run_depend>roscpp</run_depend>
-
-    <run_depend>std_msgs</run_depend>
-    <run_depend>sensor_msgs</run_depend>
-    <run_depend>std_srvs</run_depend>
-    <run_depend>message_runtime</run_depend>
-
-    <run_depend>tf</run_depend>
-
-    <run_depend>cv_bridge</run_depend>
-    <run_depend>image_transport</run_depend>
-
-    <run_depend>pcl_ros</run_depend>
-    <run_depend>pcl_conversions</run_depend>
-
-    <run_depend>parameter_pa</run_depend>
+    <doc_depend>doxygen</doc_depend>
+    <doc_depend>parameter_pa</doc_depend>
 
 </package>
