--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,14 +118,18 @@ target_link_libraries(${PROJECT_NAME}_node
 )
 
 ## Install ##
-install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_ros ${PROJECT_NAME}_node
+install(
+  TARGETS
+    ${PROJECT_NAME}
+    ${PROJECT_NAME}_ros
+    ${PROJECT_NAME}_node
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 )
 
-install(DIRECTORY include/
+install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-  FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
+  FILES_MATCHING PATTERN "*.h" PATTERN "*.hxx"
 )
 
 install(DIRECTORY launch/
