--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,7 @@
     <depend>std_srvs</depend>
 
     <depend>tf</depend>
+    <depend>laser_geometry</depend>
 
     <depend>cv_bridge</depend>
     <depend>image_transport</depend>
