--- a/config/_parameter_demo_laser.yaml
+++ b/config/_parameter_demo_laser.yaml
@@ -6,7 +6,7 @@ topic_in_cloud_old       : ""
 topic_in_laser           : "scan"
 
 ## output topics
-#topic_out_cloud          : "~out_cloud"
+#topic_out_cloud          : "~/out_cloud"
 
 ###### general settings ######
 
